# CountESS

./: .coveragerc  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  build_and_upload  default.nix  flake.nix  list_plugins.py  pyproject.toml  setup.py  test_files.py  test_font.py  test_preview.py  test_tk_dnd.py
.github/workflows/: mypy-and-pylink.yml  mypy-and-pylint.yml  mypy-checks.yml  nix-build.yml  run-tests-nonlinux.yml  run-tests-pr.yml  run-tests-push.yml  run-tests.yml  test.yml
countess/: __init__.py  gui.py
countess/core/: cmd.py  config.py  dataflow.py  gui.py  gui_dataflow.py  gui_old.py  logger.py  parameters.py  pipeline.py  plugins.py
countess/gui/: config.py  files.py  logger.py  main.py  mini_browser.py  tabular.py  tree.py  unicode.py  widgets.py
countess/gui/icons/: README.md
countess/plugins/: collate.py  column.py  columns.py  correlation.py  csv.py  curve_fit.py  data_table.py  do_nothing.py  embed_python.py  embed_r.py  expression.py  fastq.py  filter.py  frequency.py  group_by.py  group_by.py.xxx  hdf5.py  hgvs_parser.py  join.py  log_score.py  mutagenize.py  pivot.py  protein.py  python.py  random_effects.py  ranking.py  regex.py  regex_reader.py  regex_tool.py  score.py  score_scale.py  sequence.py  unpivot.py  vampseq.py  variant.py
countess/utils/: dask.py  duckdb.py  expression_to_sql.py  files.py  pandas.py  parallel.py  pyarrow.py  variant.py
doc/: writing_plugins.md
docs/: README.md  _config.yml  index.md
docs/_layouts/: default.html  with_nav.html
docs/building-documentation/: index.md
docs/config-file-format/: index.md
docs/contributing/: index.md
docs/css/: custom.css  vanilla.css
docs/documentation/: index.md
docs/further-examples/: index.md
docs/getting-started/: index.md
docs/included-plugins/: index.md
docs/installing-countess/: index.md
docs/js/: toc.js
docs/license/: index.md
docs/other-plugins/: index.md
docs/plugin-internals/: index.md
docs/plugins/: index.md
docs/release-notes/: index.md
docs/running-countess/: index.md
docs/what_is_countess/: index.md
docs/writing-plugins/: index.md
etc/: Dockerfile.gui  Dockerfile.nogui
example-plugins/do-nothing/: LICENSE.txt  README.md  do_nothing.py  setup.py
mypy_stubs/scipy/optimize/: __init__.pyi
mypy_stubs/statsmodels/api/: __init__.pyi
script/: build_and_upload  code-check  code-clean  dockerfile-py3.10  dockerfile-py3.11  dockerfile-py3.9  run-tests  run-tests-gui  run-tests-in-docker  run-tests-no-gui  set_version  show-coverage  show-docs
tests/: cmd_tests.sh  input1.csv.bz2  input1.tsv  input1.txt  input2.csv  output.csv.expected  output1.csv.bz2  simple.ini  simple.ini.output  test_cmd.py  test_config.py  test_datatable.ini  test_duckdb.py  test_expression.py  test_gui.py  test_parameters.py  test_pipeline.py  test_pipeline_sentinelqueue.py  test_plugins.py
tests/gui/: test_actions.py  test_main.py  test_mini_browser.py  test_tabular.py
tests/plugins/: test_csv.py  test_data_table.py  test_expression.py  test_filter.py  test_hgvs_parser.py  test_join.py  test_mutagenize.py  test_python.py  test_regex.py  test_variant.py
tests/utils/: test_files.py  test_pandas.py  test_parallel.py
