[project]
name = 'countess'
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Nick Moore", email="nick@zoic.org" },
    { name = "Alan Rubin", email="alan@rubin.id.au" },
]
maintainers = [
    { name = "Nick Moore", email="nick@zoic.org" },
]
description = "CountESS"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
dependencies = [
    'biobear~=0.23.2',
    'duckdb>=1.2.0',
    'fqfa~=1.3.1',
    'more_itertools~=9.1.0',
    'numpy~=1.26',
    'pandas~=2.2.3',
    'psutil~=5.9.5',
    'pyarrow~=18.1.0',
    'rapidfuzz~=3.12.0',
    'scipy~=1.13.1',
    'tkinterweb~=3.23.5',
    'ttkthemes~=3.2.2',
    'typing_extensions~=4.8.0',
]

[project.optional-dependencies]
dev = [
    'black<24',
    'build==0.10.0',
    'coverage==7.3.2',
    'mypy~=1.0.1',
    'pylint~=3.2.3',
    'semver~=3.0.2',
    'types-psutil~=5.9.5',
    'types-ttkthemes~=3.2',
    'twine~=4.0.2',
    'pandas-stubs~=2.1.0',
    'pytest~=7.2',
    'pytest-socket~=0.6.0',
    'requests-mock~=1.11.0',
]

[project.entry-points.countess_plugins]
load_fastq = "countess.plugins.fastq:LoadFastqPlugin"
load_fasta = "countess.plugins.fastq:LoadFastaPlugin"
load_csv = "countess.plugins.csv:LoadCsvPlugin"
group_by = "countess.plugins.group_by:GroupByPlugin"
expression = "countess.plugins.expression:ExpressionPlugin"
pivot = "countess.plugins.pivot:PivotPlugin"
join = "countess.plugins.join:JoinPlugin"
#python = "countess.plugins.python:PythonPlugin"
save_csv = "countess.plugins.csv:SaveCsvPlugin"
regex_tool = "countess.plugins.regex:RegexToolPlugin"
variants = "countess.plugins.variant:VariantPlugin"
mutagenize = "countess.plugins.mutagenize:MutagenizePlugin"
data_table = "countess.plugins.data_table:DataTablePlugin"
correlation = "countess.plugins.correlation:CorrelationPlugin"
score = "countess.plugins.score:ScoringPlugin"
score_scaling = "countess.plugins.score_scale:ScoreScalingPlugin"
vampseq_score = "countess.plugins.vampseq:VampSeqScorePlugin"
variant_classifier = "countess.plugins.variant:VariantClassifier"
variant_converter = "countess.plugins.variant:VariantConverter"
frequency = "countess.plugins.frequency:FrequencyPlugin"

[project.entry-points.gui_scripts]
countess_gui = "countess.gui.main:main"

[project.entry-points.console_scripts]
countess_cmd = "countess.core.cmd:main"

[tool.setuptools]
packages = [
    'countess',
    'countess.core',
    'countess.gui',
    'countess.plugins',
    'countess.utils',
]

[tool.setuptools.dynamic]
version = { attr = "countess.VERSION" }
readme = { file = "README.md", content-type="text/markdown" }

[tool.pylint]
load-plugins = "pylint.extensions.bad_builtin"
bad-functions = ['print']
disable = [
    "consider-using-f-string",
    "consider-using-with",
    "duplicate-code",
    "fixme",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "unused-argument",
    "invalid-name",
    "no-else-return",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
    "too-few-public-methods",
    "too-many-lines",
    "too-many-public-methods",
    "too-many-return-statements",
    "unidiomatic-typecheck",
]
max-line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-socket"
markers = [ "slow", "gui" ]

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "mypy_stubs"
